# advent_of_code

./: .gitignore  Cargo.toml  README.md
.github/: .dependabot.yml
.github/workflows/: rust.yml
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: cards.rs  coords.rs  file.rs  grid.rs  iterators.rs  lib.rs  math.rs  range.rs  trace.rs  v2.rs
common/src/algorithms/: dijkstra.rs  graph.rs  mod.rs
everybody/: Cargo.toml
everybody/src/: lib.rs  quest01.rs  quest02.rs  quest03.rs  quest04.rs  quest05.rs  quest06.rs
everybody/src/ducks_and_dragons/: mod.rs  quest01.rs  quest02.rs  quest03.rs  quest04.rs  quest05.rs  quest06.rs  quest07.rs  quest08.rs  quest09.rs  quest10.rs
macros/: Cargo.toml
macros/src/: impls.rs  lib.rs  solver_fn.rs
src/: aoc_2021_1.rs  aoc_2021_10.rs  aoc_2021_11.rs  aoc_2021_12.rs  aoc_2021_13.rs  aoc_2021_14.rs  aoc_2021_15.rs  aoc_2021_16.rs  aoc_2021_2.rs  aoc_2021_3.rs  aoc_2021_4.rs  aoc_2021_5.rs  aoc_2021_6.rs  aoc_2021_7.rs  aoc_2021_8.rs  aoc_2021_9.rs  common.rs  graph.rs  lib.rs  main.rs
src/algo/: dijkstra.rs  graph.rs  mod.rs
src/y2020/: day01.rs
src/y2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/y2022/: day01.rs  day02.rs  mod.rs
y2015/: Cargo.toml
y2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day18.rs  day19.rs  day21.rs  day22.rs  day23.rs  day24.rs
y2019/: Cargo.toml
y2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  intcode.rs  lib.rs
y2020/: Cargo.toml
y2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  lib.rs
y2021/: Cargo.toml
y2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day20.rs  lib.rs
y2022/: Cargo.toml
y2022/inputs/: day01.txt  day02.txt  day04.txt  day05.txt  day07.txt
y2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day11_part1.rs  day11_part2.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  lib.rs
y2023/: Cargo.toml
y2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day18.rs  day19.rs  day20.rs  day21.rs  lib.rs
y2024/: Cargo.toml
y2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
y2025/: Cargo.toml
y2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day12.rs  lib.rs
