[workspace]
resolver = "2"
members = ["common", "y2015", "y2020", "y2021", "y2022", "y2023", "cli", "y2024"]

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "allow"

[workspace.lints.clippy]
# cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# unwrap_used = "deny"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
unreadable_literal = "allow"

[workspace.dependencies]
advent_of_code_common = { path = "common" }
anyhow = "1.0.93"
geo = "0.29.1"
integer-sqrt = "0.1.5"
itertools = "0.13.0"
md5 = "0.7.0"
num = { version = "0.4.3", features = ["rand", "num-bigint"] }
petgraph = "0.6.5"
rayon = "1.10.0"
regex = "1.11.1"
seq-macro = "0.3.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
