[workspace]
resolver = "2"
members = [
    "common",
    "macros",
    "y2015",
    "y2019",
    "y2020",
    "y2021",
    "y2022",
    "y2023",
    "y2024",
    "y2025",
    "everybody",
]

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "allow"

[workspace.lints.clippy]
# cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# unwrap_used = "deny"

[workspace.dependencies]
advent_of_code_common = { path = "common" }
advent_of_code_macros = { path = "macros" }
anyhow = "1.0.94"
colored = "3.0.0"
geo = "0.31.0"
integer-sqrt = "0.1.5"
itertools = "0.14.0"
md5 = "0.8.0"
num = { version = "0.4.3", features = ["rand", "num-bigint"] }
petgraph = "0.8.3"
rayon = "1.10.0"
regex = "1.12.2"
seq-macro = "0.3.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
test-log = { version = "0.2.19", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
