[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "env", "cargo"] }
reqwest = "0.12.9"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { workspace = true, features = ["async-await"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
