[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to download all personal inputs from adventofcode.com"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/ofersadan85/advent_of_code"
publish = false
categories = ["advent-of-code", "puzzle", "challenge"]
keywords = ["advent-of-code", "puzzle", "challenge"]
license-file = "../LICENSE"

[dependencies]
anyhow.workspace = true
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env", "cargo"] }
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { workspace = true, features = ["async-await"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
