[package]
name = "advent_of_code_common"
version = "0.1.0"
edition = "2021"
authors = ["Ofer Sadan"]
description = "Common helpers for solutions to adventofcode.com in Rust"
repository = "https://github.com/ofersadan85/advent_of_code"
publish = false

[dependencies]
anyhow = { workspace = true }
integer-sqrt = "0.1.5"
itertools = { workspace = true }
num = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
