[package]
name = "advent_of_code_common"
version = "0.1.0"
edition = "2021"
description = "Common helpers for solutions to adventofcode.com in Rust"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/ofersadan85/advent_of_code"
publish = false
categories = ["advent-of-code", "puzzle", "challenge"]
keywords = ["advent-of-code", "puzzle", "challenge"]
license-file = "../LICENSE"

[dependencies]
itertools = { workspace = true }
num = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
