[package]
name = "advent_of_code_macros"
version = "0.1.0"
edition = "2021"
description = "Common helpers for solutions to adventofcode.com in Rust"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/ofersadan85/advent_of_code"
publish = false
categories = ["advent-of-code", "puzzle", "challenge"]
keywords = ["advent-of-code", "puzzle", "challenge"]
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["extra-traits", "full"] }

[lints]
workspace = true
