[package]
name = "advent_of_code_2019"
version = "0.1.0"
edition = "2024"
description = "2019 solutions to adventofcode.com in Rust"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/ofersadan85/advent_of_code"
publish = false
categories = ["advent-of-code", "puzzle", "challenge"]
keywords = ["advent-of-code", "puzzle", "challenge"]
license-file = "../LICENSE"

[dependencies]
advent_of_code_common = { workspace = true }
# anyhow = { workspace = true }
# itertools = { workspace = true }
# regex = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
seq-macro = { workspace = true }

[lints]
workspace = true
