[package]
name = "advent_of_code_2020"
version = "0.1.0"
edition = "2021"
authors = ["Ofer Sadan"]
description = "2020 solutions to adventofcode.com in Rust"
repository = "https://github.com/ofersadan85/advent_of_code"
publish = false

[dependencies]
advent_of_code_common = { path = "../common" }
itertools = "0.11.0"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
