[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"
authors = ["Ofer Sadan"]
description = "2023 solutions to adventofcode.com in Rust"
repository = "https://github.com/ofersadan85/advent_of_code"
publish = false
categories = ["advent-of-code", "puzzle", "challenge"]
keywords = ["advent-of-code", "puzzle", "challenge"]

[dependencies]
anyhow = { workspace = true }
geo = { workspace = true }
integer-sqrt = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
