[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"
description = "2023 solutions to adventofcode.com in Rust"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/ofersadan85/advent_of_code"
publish = false
categories = ["advent-of-code", "puzzle", "challenge"]
keywords = ["advent-of-code", "puzzle", "challenge"]
license-file = "../LICENSE"

[dependencies]
advent_of_code_common = { workspace = true }
advent_of_code_macros = { workspace = true }
anyhow = { workspace = true }
geo = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
